--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"nuxt": "^3.11.2",
-		"omni18n": "file:../omni18n",
+		"omni18n": "^1.1.11",
 		"vue": "^3.4.27",
 		"vue-router": "^4.3.2"
 	},
